# x-alice

./: .gitattributes  .gitignore  .pre-commit-config.yaml  pyproject.toml
models/vosk-model-small-ru-0.22/: README
models/vosk-model-small-ru-0.22/conf/: model.conf
models/vosk-model-small-ru-0.22/graph/: disambig_tid.int
models/vosk-model-small-ru-0.22/ivector/: global_cmvn.stats
src/: assistant.py  config.py  main.py  router.py
src/audio/: recorder.py  stt.py  tts.py
src/commands/: command.py  handler.py  text_filter.py
src/recorder/: audio.py
src/stt/: transcription.py
src/utils/: audio.py  types.py
src/wakeword/: detection.py  detector.py
